<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="handler"
            type="com.test.view.MainActivity" />

        <variable
            name="model"
            type="Model" />

        <variable
            name="name"
            type="String"
            />


        <import type="com.test.model.Model" />
    </data>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.test.view.MainActivity">

        <TextView
            android:id="@+id/txtTel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <!--android:text="@{Model.capitalize(model.tel) + (name != null ? name : @string/app_name)}"-->
        <Button
            android:id="@+id/btn"
            android:text="@string/getToken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{handler.avatarClickListener}" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/editIdText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            />

        <EditText
            android:id="@+id/editEmailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            />

        <Button
            android:layout_below="@+id/btn2"
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createMember" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getMemberToken" />


        <!--android:onClick="@{handler.onModelClick}"/>-->
        <!--/>-->
        <ImageView
            android:id="@+id/image"
            android:layout_below="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@{model.url}" />

        <EditText
            android:id="@+id/editText"
            android:layout_below="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <!--android:text="@={model.name}"-->

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/query" />

        <android.support.v7.widget.RecyclerView
            android:visibility="gone"
            android:id="@+id/recyclerview"
            android:layout_below="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>


        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>
    </LinearLayout>

    </ScrollView>
    </layout>

